--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url("fontawesome/css/fontawesome.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Great+Vibes&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("../../font/glacial-indifference/GlacialIndifference-Bold.otf");
+@import url("../../font/glacial-indifference/GlacialIndifference-Regular.otf");
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
@@ -197,12 +199,31 @@
 *::after {
   box-sizing: border-box;
 }
+@font-face {
+    font-family: 'Glacial Indifference';
+    src: url('../../font/glacial-indifference/GlacialIndifference-Regular.otf') format('opentype');
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: 'Glacial Indifference';
+    src: url('../../font/glacial-indifference/GlacialIndifference-Bold.otf') format('opentype');
+    font-weight: bold;
+  }
+
+  /* Menggunakan font */
+  body {
+    font-family: 'Glacial Indifference', sans-serif;
+  }
 
 .comic-neue {
   font-family: "Comic Neue", serif;
 }
 .great-vibes {
   font-family: "Great Vibes", cursive;
+}
+.glacial-indifference{
+    font-family: 'Glacial Indifference', sans-serif;
 }
 
 @media (prefers-reduced-motion: no-preference) {
